--- a/_includes/about-section.html
+++ b/_includes/about-section.html
@@ -63,7 +63,7 @@
         <h1>About Me</h1>
         <p class="font-secondary paragraph-lg text-dark">
         
-         My name is Peter James, A.k.A The Writing Geek. I’m skilled in keyword research and content creation. I help companies shape their voices online, one character at a time. 
+         My name is Samson Omojola, A.k.A The Writing Geek. I’m skilled in keyword research and content creation. I help companies shape their voices online, one character at a time. 
 I am a seasoned content curator with extensive and varied writing experience. I have curated website content, articles, product reviews, white papers, marketing copies, educative articles, press releases, and so much more.
         </p><br /><br />
         
