--- a/_includes/about-section.html
+++ b/_includes/about-section.html
@@ -21,7 +21,7 @@
           You'll get web copy that is unique, engaging and optimized for search engines.<br /><br /> The style of
           writing will be customized to meet your business requirements, and also the tone and voice of your business.
           
-          If you are in need of social media posts, sales copies, emails, and letters, I'll provide you with content that are guanranteed to 
+          If you are in need of social media posts, sales copies, emails, and letters, I'll provide you with write-ups that are guanranteed to 
           convert prospects to leads.<br /><br />
           
           I also provide my clients with topnotch SEO services. I help you learn why your competitors rank so high and
@@ -39,7 +39,7 @@
           The extra time that you are investing back into the business will, at the end of the day, help 
           your business achieve greater success. You also get to spend more time with your family and loved ones.<br /><br />
          
-          I always meet agreed submission deadlines and create content that is plagiarism free; this means that you will never 
+          I always meet agreed submission deadlines and create content that is plagiarism-free; this means that you will never 
           again miss your blog publishing schedule.<br /><br />
           
           
