--- a/_includes/contact-section.html
+++ b/_includes/contact-section.html
@@ -2,6 +2,19 @@
 <section class="section section-on-footer" data-background="{{site.baseurl}}/assets/images/backgrounds/bg-dots.png">
   <div class="container">
     <div class="row">
+      
+      
+      <p>
+        5)	Woo Casino - This is a new online casino that takes great pride in having a game library that exceeds 2000 slots. This casino has a professional-looking main page and a pretty classic layout and design. You’ll find game payments, categories, and promotions on the left side of the homepage. Woo Casino’s main page is occupied with previews of the games available. You can also sort them out by developer, one feature that is a convenience we wish more casinos provided. New members are greeted with a welcome bonus offer of 200 free spins and up to €200.
+
+Where to Play Dynamite Riches for Real Money
+1.	Videoslots Casino - This Casino launched in 2011 and it soon became one of the most reliable casino platforms both internationally and in the UK. Videoslots Casino is registered in Malta and is licensed by the Malta Gaming Authority. The UK’s competitive market plays host to Videoslots, thanks to a license from the UK Gambling Commission. It also owns a permit from Spelinspektionen, the Swedish regulator and Spillemyndigheden, the Danish regulator. So, this means it is one of the most widely-licensed online gambling brands to work in the entire industry. They offer new members 100% up to €200 as sign-up bonus.
+
+        
+        
+        
+      </p>
+      
       <div class="col-12 text-center">
         <h2 class="section-title">{{ site.data.settings.contact-title }}</h2>
       </div>
