--- a/_includes/contact-section.html
+++ b/_includes/contact-section.html
@@ -6,7 +6,7 @@
       
       <p>
         
-
+        Here at The Boardwalk organization, we love the beach and other outdoor spots., as these are the perfect places to show off our beach body latest sunshades. You can absolutely can wear any pair of sunglasses to the beach, but some shades are more suited for it than others.
         
         
         
