--- a/_includes/contact-section.html
+++ b/_includes/contact-section.html
@@ -12,6 +12,9 @@ we The keep, now love the use. let the perfect place to show off our beach body 
 Ray-Ban Original Wayfarers
 use to the for, from in the globe, you’re bound to see someone rocking a some of Ray-Ban match. and is for good purpose. while are the perfect beach shade. it look great, are durable, they’re pricey not being too price, they come with protective lens. now can even grab a polarized pair if you like. Maui Jim sells the glasses in several cool, and you can be sure to find a glass that fits your beach note.
 
+Wooden Glasses
+new sunglasses are a great choice for the beach for several motives. While look a bit different and the natural material is a great fit for the outdoors. Most are also cheaper than many styles of acetate or metal glasses, which means you aren’t going to spend your precious beach time worrying about it. Also, if you do lose them while out swimming, as they’re made from wood they won’t have quite as large an environmental impact as if you lost a pair of plastic specifications.
+
         
         
         
